--- a/app/dev/module/component/feed/feed.html
+++ b/app/dev/module/component/feed/feed.html
@@ -6,8 +6,15 @@
             </div>
 
             <div class="media-body m-t-5">
-                <h2 class="f-20"><a class="c-black" href="">Ruin or Restoration</a>
-                    <small>Posted by <a href="">Pastor Rock</a> on 31st Aug 2015 at 07:00</small>
+                <h2 class="f-20">
+                    <a class="c-black"
+                       href="#/sermon/{{::feed.id}}/study">
+                        {{::feed.title}}
+                    </a>
+                    <small>Posted by <a href="">{{::feed.user.title}} {{::feed.user.first_name}}</a>
+                        on {{::feed.created_at |
+                        formatDate:'Do MMM YYYY [at] h:mm a'}}
+                    </small>
                 </h2>
             </div>
         </div>
@@ -16,116 +23,63 @@
     </div>
 
     <div class="card-body card-padding">
-        <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce eget dolor id justo luctus commodo vel
-            pharetra nisi. Donec velit libero, gravida vel diam ut, lobortis mollis quam. Morbi posuere egestas posuere.
-            Curabitur in dui sollicitudin, lacinia magna at, laoreet sapien. Integer vitae eros nulla.</p>
-
-        <!--<div class="wall-img-preview lightbox clearfix">-->
-        <!--<div class="wip-item" data-src="img/headers/4.png" style="background-image: url(img/headers/4.png);">-->
-        <!--<div class="lightbox-item"></div>-->
-        <!--</div>-->
-        <!--</div>-->
-
-        <ul class="wall-attrs clearfix list-inline list-unstyled">
+        <p ng-bind-html="feed.displayText"></p>
+        <ul ng-if="feed.comment_count > 0 || feed.like_count > 0"
+            class="wall-attrs clearfix list-inline list-unstyled">
             <li class="wa-stats">
-                <span><i class="zmdi zmdi-comments"></i> 36</span>
-                <span class="active"><i class="zmdi zmdi-favorite"></i> 220</span>
-            </li>
+                <span ng-if="feed.comment_count > 0"><i class="zmdi zmdi-comments"></i>
+                    {{::feed.comment_count}}</span>
+                <span>
+                <a ng-click="like()"
+                   href
+                   ng-class="{'c-gray': !liked(), 'c-lightblue': liked() }">
+                    <i class="zmdi zmdi-thumb-up"></i> {{::feed.like_count}}
+                </a>
+                    </span>
 
-            <li class="wa-users">
-                <a href=""><img src="img/profile-pics/1.jpg" alt=""></a>
-                <a href=""><img src="img/profile-pics/2.jpg" alt=""></a>
-                <a href=""><img src="img/profile-pics/3.jpg" alt=""></a>
-                <a href=""><img src="img/profile-pics/5.jpg" alt=""></a>
             </li>
+            <!--<li class="wa-users">-->
+            <!--<a href=""><img src="img/profile-pics/1.jpg" alt=""></a>-->
+            <!--<a href=""><img src="img/profile-pics/2.jpg" alt=""></a>-->
+            <!--<a href=""><img src="img/profile-pics/3.jpg" alt=""></a>-->
+            <!--<a href=""><img src="img/profile-pics/5.jpg" alt=""></a>-->
+            <!--</li>-->
         </ul>
     </div>
 
-    <div class="wall-comment-list">
 
-        <!-- Comment Listing -->
-        <div class="wcl-list">
-            <div class="media">
-                <a href="" class="pull-left">
-                    <img src="img/profile-pics/5.jpg" alt="" class="lv-img-sm">
-                </a>
+    <div class="wall-comment-list p-t-5 p-b-5">
 
-                <div class="pull-right p-0">
-                    <ul class="actions">
-                        <li class="dropdown" uib-dropdown>
-                            <a href="" uib-dropdown-toggle aria-haspopup="true" aria-expanded="false">
-                                <i class="zmdi zmdi-more-vert"></i>
-                            </a>
-
-                            <ul class="dropdown-menu dropdown-menu-right">
-                                <li>
-                                    <a href="">Report</a>
-                                </li>
-                                <li>
-                                    <a href="">Delete</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-
-                <div class="media-body">
-                    <a href="" class="a-title">David Nathan</a>
-                    <small class="c-gray m-l-10">3 mins ago...</small>
-                    <p class="m-t-5 m-b-0">Maecenas dignissim in neque id commodo. Nam pretium a tortor a convallis.
-                        Curabitur in arcu quis nulla aliquam condimentum. Morbi eu cursus diam, vitae tristique dui.</p>
-                </div>
-            </div>
-
-            <div class="media">
-                <a href="" class="pull-left">
-                    <img src="img/profile-pics/4.jpg" alt="" class="lv-img-sm">
-                </a>
-
-                <div class="media-body">
-                    <a href="" class="a-title">Sam Anderson</a>
-                    <small class="c-gray m-l-10">3 mins ago...</small>
-                    <p class="m-t-5 m-b-0">Curabitur in arcu quis nulla aliquam condimentum.</p>
-                </div>
-
-                <ul class="actions">
-                    <li class="dropdown" uib-dropdown>
-                        <a href="" uib-dropdown-toggle aria-haspopup="true" aria-expanded="false">
-                            <i class="zmdi zmdi-more-vert"></i>
-                        </a>
-
-                        <ul class="dropdown-menu dropdown-menu-right">
-                            <li>
-                                <a href="">Report</a>
-                            </li>
-                            <li>
-                                <a href="">Delete</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <!-- Comment form -->
-        <div class="wcl-form">
-            <div class="wc-comment" data-ng-if="!mactrl.wallCommenting[1]"
-                 data-ng-click="mactrl.wallCommenting[1] = true">
+        <div class="wcl-form m-t-10">
+            <div class="wc-comment" data-ng-if="!feed.commenting"
+                 data-ng-click="feed.commenting = true">
                 <div class="wcc-inner">
                     Write Something...
                 </div>
             </div>
 
-            <div class="wc-comment" data-ng-if="mactrl.wallCommenting[1]">
+            <div class="wc-comment" data-ng-if="feed.commenting">
                 <div class="wcc-inner">
-                    <textarea class="wcci-text" data-auto-size placeholder="Write Something..."></textarea>
+                    <textarea class="wcci-text c-black" data-auto-size
+                              ng-model="feed.newComment_" focus-cursor
+                              placeholder="Write Something...">
+                    </textarea>
                 </div>
 
                 <div class="m-t-15">
-                    <button class="btn btn-sm btn-primary">Post</button>
-                    <button class="btn btn-sm btn-link" data-ng-click="mactrl.wallCommenting[1] = false">Cancel</button>
+                    <button ng-click="postComment(feed.newComment_)"
+                            class="btn btn-sm btn-primary">Post
+                    </button>
+                    <button class="btn btn-sm btn-link"
+                            data-ng-click="feed.commenting = false">Cancel
+                    </button>
                 </div>
             </div>
+
         </div>
+         <p ng-if="!feed.showComments" class="m-t-10 m-b-0"><a href ng-click="feed.showComments = true">View comments</a></p>
+         <p ng-if="feed.showComments" class="m-t-10 m-b-0"><a href ng-click="feed.showComments = false">Collapse comments</a></p>
     </div>
+
+    <comments ng-if="feed.showComments" data="::feed.comments"></comments>
 </div>
