--- a/app/dev/module/component/feed/feed.html
+++ b/app/dev/module/component/feed/feed.html
@@ -2,7 +2,7 @@
     <div class="card-header">
         <div class="media">
             <div class="pull-left">
-                <img class="lv-img" src="img/profile-pics/1.jpg" alt="">
+                <img class="lv-img" ng-src="{{util.imagePath(feed.user)}}" alt="">
             </div>
 
             <div class="media-body m-t-5">
