Client Add support to auto-detect scripture in text and add-directive that will highlight text and load scripture on select.
Update parseScripture function for smarter detection with shorter code

Server
Added route to save new post and to like/unlike user post.
Made some refactor the model class. Renamed the filter_feed function to process_feed and moved it out

--- a/app/dev/css/scripturedin.css
+++ b/app/dev/css/scripturedin.css
@@ -554,3 +554,10 @@ wysiwyg-edit.summary .tinyeditor .sizer {
 #header {
     height: 70px;
 }
+
+.scripture-highlight {
+    background-color: rgba(214, 210, 25, 0.2);
+    padding: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
