--- a/app/dev/module/component/scripture/scripture-modal.html
+++ b/app/dev/module/component/scripture/scripture-modal.html
@@ -1,5 +1,5 @@
 <div class="modal-body">
-    <scripture text="modalCtrl.scripture"></scripture>
+    <scripture-card text="modalCtrl.scripture"></scripture-card>
 </div>
 <!--<div class="modal-footer">-->
    <!---->
