--- a/app/dev/module/component/feed/feed.html
+++ b/app/dev/module/component/feed/feed.html
@@ -7,12 +7,11 @@
 
             <div class="media-body m-t-5">
                 <h2 class="f-20">
-                    <a class="c-black"
-                       href="#/sermon/{{::feed.id}}/study">
-                        {{::feed.title}}
+                    <a class="c-black">
+                        <!--{{::feed.title}}-->
+                        <name-tag user="feed.user"></name-tag>
                     </a>
-                    <small>Posted by <a href="">{{::feed.user.title}} {{::feed.user.first_name}}</a>
-                        on {{::feed.created_at |
+                    <small>Posted on {{::feed.created_at |
                         formatDate:'Do MMM YYYY [at] h:mm a'}}
                     </small>
                 </h2>
@@ -23,17 +22,18 @@
     </div>
 
     <div class="card-body card-padding">
-        <p ng-bind-html="feed.displayText"></p>
-        <ul ng-if="feed.comment_count > 0 || feed.like_count > 0"
-            class="wall-attrs clearfix list-inline list-unstyled">
+        <p class="m-b-15" bind-html-compile="feed.displayText"></p>
+
+        <ul class="wall-attrs clearfix list-inline list-unstyled">
             <li class="wa-stats">
-                <span ng-if="feed.comment_count > 0"><i class="zmdi zmdi-comments"></i>
-                    {{feed.comment_count}}</span>
                 <span>
-                <a ng-click="like()"
-                   href
-                   ng-class="{'c-gray': !liked(), 'c-lightblue': liked() }">
-                    <i class="zmdi zmdi-thumb-up"></i> {{feed.like_count}}
+                    <i class="zmdi zmdi-comments"></i>
+                    <span ng-if="feed.comment_count > 0">{{feed.comment_count}}</span>
+                </span>
+                <span>
+                <a ng-click="like()" href ng-class="{'c-gray': !liked(), 'c-lightblue': liked() }">
+                    <i class="zmdi zmdi-thumb-up"></i>
+                    <span ng-if="feed.like_count > 0">{{feed.like_count}}</span>
                 </a>
                     </span>
 
@@ -50,7 +50,7 @@
 
     <div class="wall-comment-list p-t-5 p-b-5">
 
-        <div class="wcl-form m-t-10">
+        <div class="wcl-form m-t-5">
             <div class="wc-comment" data-ng-if="!feed.commenting"
                  data-ng-click="feed.commenting = true">
                 <div class="wcc-inner">
@@ -77,8 +77,12 @@
             </div>
 
         </div>
-         <p ng-if="feed.comments.comments.length > 5" ng-hide="feed.showComments" class="m-t-10 m-b-0"><a href ng-click="feed.showComments = true">View comments</a></p>
-         <p ng-if="feed.comments.comments.length > 5" ng-show="feed.showComments" class="m-t-10 m-b-0"><a href ng-click="feed.showComments = false">Collapse comments</a></p>
+        <p ng-if="feed.comments.comments.length > 5" ng-hide="feed.showComments" class="m-t-10 m-b-0"><a href
+                                                                                                         ng-click="feed.showComments = true">View
+            comments</a></p>
+        <p ng-if="feed.comments.comments.length > 5" ng-show="feed.showComments" class="m-t-10 m-b-0"><a href
+                                                                                                         ng-click="feed.showComments = false">Collapse
+            comments</a></p>
     </div>
 
     <comments ng-if="feed.showComments" data="feed.comments"></comments>
