Fixed content views pushed to far right.
Removed translation icon.

Fixed issue with signup/ first login with Facebook doesn't show welcome page.

--- a/app/dev/css/scripturedin.css
+++ b/app/dev/css/scripturedin.css
@@ -561,3 +561,9 @@ wysiwyg-edit.summary .tinyeditor .sizer {
     font-weight: bold;
     cursor: pointer;
 }
+
+@media (min-width: 1200px) {
+    body.sw-toggled #content {
+        padding-left: 300px;
+    }
+}
