--- a/app/prod/scripturedin.css
+++ b/app/prod/scripturedin.css
@@ -554,3 +554,16 @@ wysiwyg-edit.summary .tinyeditor .sizer {
 #header {
     height: 70px;
 }
+
+.scripture-highlight {
+    background-color: rgba(214, 210, 25, 0.2);
+    padding: 5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+@media (min-width: 1200px) {
+    body.sw-toggled #content {
+        padding-left: 300px;
+    }
+}
