Fixed bug in extracting scripture from text.
Fixed unicode error on server response for bible api.

--- a/app/dev/module/component/feed/feed.html
+++ b/app/dev/module/component/feed/feed.html
@@ -6,6 +6,7 @@
             </div>
 
             <div class="media-body m-t-5">
+                <!--<a href class="pull-right"><i class="zmdi zmdi-thumb-up"></i></a>-->
                 <h2 class="f-20">
                     <a class="c-black">
                         <!--{{::feed.title}}-->
@@ -14,6 +15,7 @@
                     <small>Posted on {{::feed.created_at |
                         formatDate:'Do MMM YYYY [at] h:mm a'}}
                     </small>
+
                 </h2>
             </div>
         </div>
