--- a/app/dev/css/scripturedin.css
+++ b/app/dev/css/scripturedin.css
@@ -567,3 +567,13 @@ wysiwyg-edit.summary .tinyeditor .sizer {
         padding-left: 300px;
     }
 }
+
+.animate-show.ng-hide-add, .animate-show.ng-hide-remove {
+  transition: all linear 0.5s;
+}
+
+.animate-show.ng-hide {
+  line-height: 0;
+  opacity: 0;
+  padding: 0 10px;
+}
