fixed bug with bible-service injection, removed unused $scope variable.
Major fix on bible query api and scripture card.
+ Back rewrite to handle translations with headers and very different response formats.
+ Updated UI to display those headings as well.
+ Removed some versions

--- a/app/dev/css/scripturedin.css
+++ b/app/dev/css/scripturedin.css
@@ -577,3 +577,7 @@ wysiwyg-edit.summary .tinyeditor .sizer {
   opacity: 0;
   padding: 0 10px;
 }
+#verses h4 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
