--- a/app/dev/module/component/scripture/scripture-card.html
+++ b/app/dev/module/component/scripture/scripture-card.html
@@ -1,4 +1,4 @@
-<div class="card scripture">
+<div class="card scripture" style="padding: 30px">
     <md-progress-linear md-mode="indeterminate" ng-show="loading"></md-progress-linear>
     <div ng-show="!loading && scripture">
         <div class="card-header">
@@ -15,7 +15,7 @@
                 <!--</li>-->
                 <li class="dropdown" uib-dropdown>
                     <a href="" uib-dropdown-toggle>
-                         {{scripture.version}}
+                        {{scripture.version}}
                         <i class="zmdi zmdi-caret-down"></i>
                         <md-tooltip>Change translation</md-tooltip>
                     </a>
@@ -38,12 +38,16 @@
                 <h3 class="title">Chapter {{scripture.chapter}}</h3>
 
                 <div id="verses">
-                    <p id="v{{verse}}" class="verse" ng-class="{highlight: readCtrl.selected[book][verse]}"
-                       ng-repeat="v in scripture.verses">
-                        <a href="" ng-click="readCtrl.highlight(verse, book)">
-                            <span style="margin-right: 15px">{{v.verse}}:</span></a>
-                        {{v.content}}
-                    </p>
+                    <div ng-repeat="v in scripture.verses">
+                        <h4 ng-if="v.heading">{{v.heading}}</h4>
+                        <p id="v{{verse}}" class="verse" ng-class="{highlight: readCtrl.selected[book][verse]}">
+                            <a ng-if="v.verse" href="" ng-click="readCtrl.highlight(verse, book)">
+                                <span style="margin-right: 15px">{{v.verse}}:</span>
+                            </a>
+                            {{v.content}}
+                        </p>
+                    </div>
+
                 </div>
 
             </div>
