--- a/app/dev/module/component/scripture/scripture-modal.html
+++ b/app/dev/module/component/scripture/scripture-modal.html
@@ -1,6 +1,6 @@
 <div class="modal-body">
     <scripture-card text="modalCtrl.scripture"></scripture-card>
 </div>
-<!--<div class="modal-footer">-->
-   <!---->
-<!--</div>-->
+<div class="modal-footer p-0">
+    <button class="btn btn-link" ng-click="modalCtrl.close()">Close</button>
+</div>
